--- a/reports.html
+++ b/reports.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transaction Report</title>
-<link rel="stylesheet" href="reports.css">
+<link rel="stylesheet" href="/styles/reports.css">
 </head>
 <body>
     <button onclick="window.location.href='index.html'">Go Back to Input Form</button>
@@ -31,6 +31,6 @@
         </tfoot>
     </table>
 
-<script src="main.js" defer></script>
+<script src="/src/main.js" defer></script>
 </body>
 </html>
