--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Church System</title>
 </head>
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="/styles/index.css">
 <body>
 <div id="innerbody">
 <div id="inner1">
@@ -59,6 +59,6 @@
         </table>
     </div>
 </div>
-<script src="index.js" defer></script>
+<script src="/src/index.js" defer></script>
 </body>
 </html>
